# twitchio-token-relay

./: .env.example  .gitignore  Dockerfile  README.md  SCHEMA.sql  biome.json  compose.yaml  config.example.yaml  main.py  requirements.txt
eira/: biome.json  index.html  package.json  vite.config.ts
eira/html/: index.html  login.html
eira/src/: App.tsx  index.css  index.tsx  main.css  main.tsx
eira/src/components/: Slider.tsx
eira/src/pages/: Dashboard.tsx  Home.tsx  index.tsx  login.tsx
eira/src/pages/css/: Home.css  index.css  login.css
eira/src/types/: components.ts  responses.ts
ember/: SCHEMA.sql  __init__.py  app.py  config.example.yaml  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
ember/controllers/: __init__.py  api.py  oauth.py  sessions.py
ember/types_/: config.py  models.py
